--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -14,6 +14,7 @@
 
 .bingocard-square {
   font-family: 'Dosis', sans-serif;
+  font-size: 14px;
   width: 100px;
   height: 100px;
   background: lavenderblush;
