--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -38,6 +38,7 @@
 .bingocard-selected {
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
+  font-size: 14px;
   width: 100px;
   height: 100px;
   background: darkslateblue;
