--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -79,6 +79,27 @@
   0 20px 20px rgba(0,0,0,.15);
 }
 
+.shuffle {
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color: aliceblue;
+  width: 80px;
+  height: 42px;
+  background: cornflowerblue;
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  bottom: 87%;
+  right: 15%;
+  border-radius: 50px;
+  line-height: 40px;
+}
+
+.shuffle:hover {
+  background: black;
+}
+
 .wrapper {
   overflow: hidden;
 }
