--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -22,6 +22,7 @@
   border: solid 5px;
   float: left;
   text-align: center;
+  line-height: 24px;
   cursor: pointer;
   overflow-wrap: break-word;
 
