--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -91,9 +91,8 @@
   background: cornflowerblue;
   cursor: pointer;
   text-align: center;
-  position: absolute;
+  position: sticky;
   bottom: 87%;
-  right: 15%;
   border-radius: 50px;
   line-height: 40px;
 }
