--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -91,7 +91,8 @@
   background: cornflowerblue;
   cursor: pointer;
   text-align: center;
-  position: sticky;
+  position: absolute;
+  z-index: 5;
   bottom: 87%;
   border-radius: 50px;
   line-height: 40px;
