--- a/stylesheets/01-bingocard.css
+++ b/stylesheets/01-bingocard.css
@@ -5,7 +5,6 @@
 }
 
 .bingocard {
-  height: 550px;
   min-width: 550px;
   max-width: 550px;
   padding: 50px;
@@ -62,9 +61,16 @@
   border-color: white;
 }
 
+.header-grid {
+  display: grid;
+  grid-template-areas:
+    "a b c";
+  padding-bottom: 10px;
+}
+
 .title {
+  grid-area: b;
   top: 50px;
-  position: absolute;
   font:normal 30pt Arial;
   color:#FFFFFF;
   text-shadow: 0 1px 0 #ccc,
@@ -82,6 +88,7 @@
 }
 
 .shuffle {
+  grid-area: a;
   font-family: 'Dosis', sans-serif;
   font-weight: 600;
   font-size: 20px;
@@ -91,9 +98,7 @@
   background: cornflowerblue;
   cursor: pointer;
   text-align: center;
-  position: absolute;
   z-index: 5;
-  bottom: 87%;
   border-radius: 50px;
   line-height: 40px;
 }
